Windows: Fix incorrect player start position

Fixes QMediaPlayer jumping to wrong position after seeking while paused.

Fixes: QTBUG-97152
Change-Id: I133f980745f60b10a188dc1edc06cdb44777afa0
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 9285ad4a87c47d2744124f14aebe710e1ee55517)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>